--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cli"
   ],
   "devDependencies": {
-    "ava": "^0.11.0"
+    "ava": "^0.11.0",
+    "xo": "^0.12.1"
   },
   "bin": {
     "imdbtr": "./bin/imdbtr"
