--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "chalk": "^1.1.3",
     "figures": "^1.7.0",
     "got": "^6.3.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "ora": "^0.2.3"
   },
   "keywords": [
     "imdb",
